--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "glob": "^5.0.14",
     "gulp": "^3.9.0",
     "gulp-autoprefixer": "^2.3.1",
-    "gulp-cache": "^0.3.0",
+    "gulp-cache": "^0.4.1",
     "gulp-clean": "^0.3.1",
     "gulp-concat": "^2.6.0",
     "gulp-express": "^0.3.5",
@@ -34,5 +34,8 @@
     "tiny-lr": "^0.1.6",
     "vinyl": "^0.5.1",
     "win-spawn": "^2.0.0"
+  },
+  "dependencies": {
+    "imagemin-pngquant": "^4.2.0"
   }
 }
